@@ -1,3 +1,4 @@
 files
 Makefile
 Makefile.in
+quakeforge-common.conffiles
