@@ -132,6 +132,7 @@ Description: QuakeForge 3D game engine - Servers
 Package: quakeforge-libs-sw
 Architecture: any
 Depends: quakeforge-common, ${shlibs:Depends}
+Section: contrib/libs
 Description: QuakeForge 3D game engine - Software renderer libraries
  QuakeForge is a source port of Quake and QuakeWorld, the successors to id
  Software's very popular DOOM series. Its primary development goal is to
@@ -144,6 +145,7 @@ Description: QuakeForge 3D game engine - Software renderer libraries
 Package: quakeforge-libs-gl
 Architecture: any
 Depends: quakeforge-common, ${shlibs:Depends}
+Section: contrib/libs
 Description: QuakeForge 3D game engine - OpenGL renderer libraries
  QuakeForge is a source port of Quake and QuakeWorld, the successors to id
  Software's very popular DOOM series. Its primary development goal is to
