@@ -1,4 +1,4 @@
-// QuakeForge: Newtree Configuration
+// QuakeForge Configuration
 
 // Location of shared data
 setrom fs_sharepath "/usr/share/games/quake"
@@ -6,10 +6,17 @@ setrom fs_sharepath "/usr/share/games/quake"
 // Location of user's personal data
 setrom fs_userpath "~/.quake"
 
+// CD Audio
+set cd_plugin linux
+
+// Uncomment one of these to choose audio support
+//set snd_output oss
+//set snd_output alsa0.9
+
 // Video defaults
 set vid_width 640
 set vid_height 480
 set vid_fullscreen 0
 
-// Uncomment for high-quality OpenGL rendering
+// Uncomment for higher-quality rendering in the OpenGL targets
 //gl_texturemode gl_linear_mipmap_linear
